kagenti/examples/app-demo/k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-demo
  namespace: kagenti-system
  labels:
    app: app-demo
spec:
  parentRefs:
    - name: http
      namespace: kagenti-system
  hostnames:
    - "app-demo.localtest.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: app-demo-backend
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: app-demo-frontend
          port: 8080
